--- a/src/sass/elements/_lists.scss
+++ b/src/sass/elements/_lists.scss
@@ -24,13 +24,13 @@ ol ul {
 
 li {
     padding: 0.3rem 0 0.3rem 0.2rem;
-    @include px2rem($font-size-content-listitem);  
+    font-size: var(--font-size-normal, 1rem);   	
 
     .widget.quicklinks &,
     .portalpage-sidebar &,
     .sidebar-inline & {
 	padding: 0;
-	@include px2rem($font-size-sidebar-listitem);	    	
+	font-size: var(--font-size-small, 0.875rem);   	
     }
 }
 
