--- a/src/sass/elements/_paragraphs.scss
+++ b/src/sass/elements/_paragraphs.scss
@@ -29,12 +29,10 @@ p {
         text-wrap: pretty;
     }
 
-    .textwidget & {
-        @include px2rem($font-size-contentwidgets);
-    }
-
+   
+    .textwidget &,
     aside &,
     .widget & {
-        @include px2rem($font-size-sidebar);
+        font-size: var(--font-size-small, 0.875rem);
     }
 }
