--- a/src/sass/plugins/_rrze-glossary.scss
+++ b/src/sass/plugins/_rrze-glossary.scss
@@ -24,7 +24,7 @@
 			color: var(--color-Text);
 	    }
 	    span, a {
-		@include px2rem($font-size-textbuttons);
+		font-size: var(--font-size-buttons, 0.938rem);
 		width: 100%;
 		line-height: 2.5rem;
 		padding: 0.2rem;		
