--- a/src/sass/elements/_accessibility.scss
+++ b/src/sass/elements/_accessibility.scss
@@ -46,7 +46,7 @@
 
 		    width: 100%;
 		    text-decoration: none;
-		    @include px2rem($font-size-large);
+		    font-size: var(--font-size-large, 1.25rem);
 
 		}
 	    }
