--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -135,8 +135,8 @@ main, aside, .portalpage-sidebar, .widget {
 		margin-bottom: 1rem;
 	    }
 	    @media (min-width: $screen-sm) {
-		margin-left: $fau-gutter-halfwidth;
-		margin-right: $fau-gutter-halfwidth;
+		margin-left: var(--width-gutter-half, 15px);
+		margin-right: var(--width-gutter-half, 15px);
 	     }
 	    img {
 		max-width: 100vw;
@@ -176,7 +176,7 @@ main, aside, .portalpage-sidebar, .widget {
 }
 
 figcaption {
-	@include px2rem($font-size-image-caption);
+	font-size: var(--font-size-small, 0.875rem);
 	padding: 0.3rem;
 	
 	@media (min-width: $screen-xs) {
