--- a/src/sass/mixins/_global.scss
+++ b/src/sass/mixins/_global.scss
@@ -130,12 +130,12 @@
     padding: 8px 10px;
     text-decoration: none;
     @include border-radius(var(--border-radius-buttons, 3px));
-    @include px2rem($font-size-textbuttons);
+    font-size: var(--font-size-buttons, 0.938rem);
 
     a {
         @include inline-block;
         @include border-radius(var(--border-radius-buttons, 3px));
-        @include px2rem($font-size-textbuttons);
+        font-size: var(--font-size-buttons, 0.938rem);
         @include buttoncolor();
         padding: 6px 10px;
         text-decoration: none;
@@ -203,15 +203,13 @@
 
 @mixin buttonstyle() {
     @include inline-block;
-    @include px2rem($font-size-textbuttons);
     @include buttoncolor;
 
     border: none;
-    // padding: 0.5rem 0.7rem;
     padding: 10px 18px;
     text-decoration: none;
     border-radius: var(--border-radius-buttons, 3px);
-    font-size: 1rem;
+    font-size: var(--font-size-normal, 1rem);
     line-height: 1.5;
     text-align: center;
     font-weight: normal;
@@ -227,8 +225,8 @@
 
 @mixin ghostbutton($border: 1px) {
     @include inline-block;
-    @include px2rem($font-size-textbuttons);
-
+    
+    font-size: var(--font-size-buttons, 0.938rem);
     background: transparent;
     color: var(--color-Text);
     border: $border solid var(--color-ContentBorders);
