--- a/src/sass/mixins/_mixin-blockquotes.scss
+++ b/src/sass/mixins/_mixin-blockquotes.scss
@@ -48,7 +48,7 @@
     cite {
         display: block;
         text-align: right;
-        @include px2rem($font-size-quotes-cites);
+        font-size: var(--font-size-small, 0.875rem);
         color: var(--color-Text);
 
         &:before {
@@ -104,10 +104,10 @@
     .sidebar-inline & {
         margin: 0.6rem;
         padding: 0.5rem;
-        @include px2rem($font-size-sidebar);
+        font-size: var(--font-size-small, 0.875rem);
 
         p {
-            @include px2rem($font-size-sidebar);
+            font-size: var(--font-size-small, 0.875rem);
         }
     }
 }
@@ -122,10 +122,10 @@
     }
 
     #content .sidebar-inline & {
-        @include px2rem($font-size-sidebar);
+        font-size: var(--font-size-small, 0.875rem);
 
         p {
-            @include px2rem($font-size-sidebar);
+            font-size: var(--font-size-small, 0.875rem);
         }
     }
 }
