--- a/src/sass/editor-style/_core-verse.scss
+++ b/src/sass/editor-style/_core-verse.scss
@@ -16,7 +16,7 @@ pre.wp-block-verse {
     color: var(--color-Text);
     background-color: var(--color-StandardHellgrau);
     font-family: var(--font-family-monospace);
-    font-size: var(--font-size-small, 0.875rem);
+    font-size: var(--font-size-sm, 0.875rem);
 }
 
 pre.wp-block-verse,
