--- a/src/sass/elements/_code.scss
+++ b/src/sass/elements/_code.scss
@@ -7,7 +7,7 @@ pre,
 kbd,
 samp {
     font-family: var(--font-family-monospace);
-    font-size: var(--font-size-small, 0.875rem);
+    font-size: var(--font-size-sm, 0.875rem);
 }
 
 code,
