--- a/src/sass/elements/_lists.scss
+++ b/src/sass/elements/_lists.scss
@@ -30,7 +30,7 @@ li {
     .portalpage-sidebar &,
     .sidebar-inline & {
 	padding: 0;
-	font-size: var(--font-size-small, 0.875rem);   	
+	font-size: var(--font-size-sm, 0.875rem);   	
     }
 }
 
