--- a/src/sass/elements/_pagination.scss
+++ b/src/sass/elements/_pagination.scss
@@ -16,13 +16,13 @@
 		}
 
 		.subpages {
-			font-size: var(--font-size-small, 0.875rem);
+			font-size: var(--font-size-sm, 0.875rem);
 			margin: 10px;
 			@include inline-block();
 
 			a {
 				@include buttoncolor();
-				font-size: var(--font-size-small, 0.875rem);
+				font-size: var(--font-size-sm, 0.875rem);
 				text-decoration: none;
 			
 				.number {
@@ -37,7 +37,7 @@
 			}
 			.current .number {
 				@include ghostbutton();
-				font-size: var(--font-size-small, 0.875rem);
+				font-size: var(--font-size-sm, 0.875rem);
 			}
 			
 		}
