--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -91,7 +91,7 @@
 			@include no-list;
 			padding: 10px 0 0 0;
 			min-height: 42px;
-			font-size: var(--font-size-small, 0.875rem);
+			font-size: var(--font-size-sm, 0.875rem);
 			background-image: none;
 		}
 	}
