--- a/src/sass/structure/content/_event-items.scss
+++ b/src/sass/structure/content/_event-items.scss
@@ -26,9 +26,9 @@
 }
 
 .topevent-description {
-	font-size: var(--font-size-small, 0.875rem);
+	font-size: var(--font-size-sm, 0.875rem);
 	p {
-	    font-size: var(--font-size-small, 0.875rem);
+	    font-size: var(--font-size-sm, 0.875rem);
 	}
 }
 
