--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -32,7 +32,7 @@
 	width: 100%;
 	
 	.sidebar-inline {
-	    font-size: var(--font-size-small, 0.875rem);
+	    font-size: var(--font-size-sm, 0.875rem);
 	}
 	
 	.subtitle {
