--- a/src/sass/structure/hero/_banner.scss
+++ b/src/sass/structure/hero/_banner.scss
@@ -121,7 +121,7 @@
 		p.description {
 			font-weight: normal;
 			color: var(--color-hero-text);
-			font-size: var(--font-size-large, 1.25rem);
+			font-size: var(--font-size-xl, 1.25rem);
 			display: none;
 			background: var(--color-hero-bg);
 			padding: 0 7px 1px 7px;
