--- a/src/sass/structure/navigation/_breadcrumb.scss
+++ b/src/sass/structure/navigation/_breadcrumb.scss
@@ -9,7 +9,7 @@ ol.breadcrumblist {
     li {
         @include no-list;
         display: inline;
-        font-size: var(--font-size-small, 0.875rem);
+        font-size: var(--font-size-sm, 0.875rem);
     }
     li:after {
 	    content: ' / ';
