--- a/css/fau-theme-classiceditor.css
+++ b/css/fau-theme-classiceditor.css
@@ -2,7 +2,7 @@
 /*!
 * Editor CSS for Theme:
 * Theme Name: FAU-Einrichtungen
-* Version: 2.6.3-2
+* Version: 2.6.3-4
 * GitHub Issue URL: https://github.com/RRZE-Webteam/FAU-Einrichtungen/issues
 */
 /*-----------------------------------------------------------------------------------*/
@@ -156,10 +156,13 @@
     --color-menulink-hover-bg: #004A9F;
     --color-overlay-dark: rgba(0, 0, 0, 0.15);
     --color-overlay-light: rgba(255, 255, 255, 0.15);
-    --font-size-small: 0.875rem;
+    --font-size-xs:	0.76rem;
+    --font-size-sm:	0.875rem;
+    --font-size-tiny:	0.938rem;
     --font-size-normal: 1rem;
-    --font-size-large: 1.75rem;
-    --font-size-x-large: 2.25rem;
+    --font-size-lg:	1.125rem;
+    --font-size-xl:	1.25rem;
+    --font-size-xxl:	1.5rem;
     --font-family-default: Roboto, FAU Chimera, sans-serif;
     --font-family-serif: Georgia, Times New Roman, Times, serif;
     --font-family-monospace: Menlo, Monaco, Consolas, Courier New, monospace;
@@ -169,6 +172,7 @@
     --devider-height: 4px;
     --width-gutter: 30px;
     --width-gutter-half: 15px;
+    --width-gutter-third: 10px;
     --base-line-height: 1.5;
 }
 
@@ -931,7 +935,7 @@ table .wp-editor h6 {
 .wp-editor kbd,
 .wp-editor samp {
     font-family: var(--font-family-monospace);
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor code,
 .wp-editor pre {
@@ -999,7 +1003,7 @@ table .wp-editor h6 {
     padding: 0;
     font-weight: 300;
     font-style: italic;
-    font-size: 1.125rem;
+    font-size: var(--font-size-lg, 1.125rem);
 }
 .wp-editor p.presentationtitle {
     font-weight: bold;
@@ -1010,11 +1014,8 @@ table .wp-editor h6 {
     hyphens: auto;
     text-wrap: pretty;
 }
-.textwidget .wp-editor p {
-    font-size: 0.875rem;
-}
-aside .wp-editor p, .widget .wp-editor p {
-    font-size: 0.875rem;
+.textwidget .wp-editor p, aside .wp-editor p, .widget .wp-editor p {
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor address {
     margin: 0;
@@ -1025,7 +1026,7 @@ aside .wp-editor p, .widget .wp-editor p {
     font-style: normal;
 }
 aside .wp-editor address, .widget .wp-editor address {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor a {
     color: var(--color-links);
@@ -1231,7 +1232,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     text-underline-offset: 0.2rem;
     text-decoration-thickness: 0.1rem;
     display: inline-block;
-    font-size: 0.938rem;
+    font-size: var(--font-size-tiny, 0.938rem);
     background: transparent;
     color: var(--color-Text);
     border: 1px solid var(--color-ContentBorders);
@@ -1280,7 +1281,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     text-underline-offset: 0.2rem;
     text-decoration-thickness: 0.1rem;
     display: inline-block;
-    font-size: 0.938rem;
+    font-size: var(--font-size-tiny, 0.938rem);
     background: transparent;
     color: var(--color-Text);
     border: 1px solid var(--color-ContentBorders);
@@ -1470,11 +1471,11 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 }
 .wp-editor li {
     padding: 0.3rem 0 0.3rem 0.2rem;
-    font-size: 1rem;
+    font-size: var(--font-size-normal, 1rem);
 }
 .widget.quicklinks .wp-editor li, .portalpage-sidebar .wp-editor li, .sidebar-inline .wp-editor li {
     padding: 0;
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor ul li {
     list-style-type: disc;
@@ -1770,14 +1771,14 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     display: inline-block;
 }
 .wp-editor .pagination.pagebreaks .subpages {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
     margin: 10px;
     display: inline-block;
 }
 .wp-editor .pagination.pagebreaks .subpages a {
     color: var(--color-button-text);
     background-color: var(--color-button-bg);
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
     text-decoration: none;
 }
 .wp-editor .pagination.pagebreaks .subpages a:hover, .wp-editor .pagination.pagebreaks .subpages a:focus {
@@ -1801,14 +1802,14 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 }
 .wp-editor .pagination.pagebreaks .subpages .current .number {
     display: inline-block;
-    font-size: 0.938rem;
+    font-size: var(--font-size-tiny, 0.938rem);
     background: transparent;
     color: var(--color-Text);
     border: 1px solid var(--color-ContentBorders);
     border-radius: var(--border-radius-buttons, 3px);
     padding: 10px 18px;
     text-decoration: none;
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor .pagination.pagebreaks .subpages .current .number:hover, .wp-editor .pagination.pagebreaks .subpages .current .number:focus {
     text-decoration: none;
@@ -1873,7 +1874,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 }
 .wp-editor input[type=file] {
     display: inline-block;
-    font-size: 0.938rem;
+    font-size: var(--font-size-tiny, 0.938rem);
     background: transparent;
     color: var(--color-Text);
     border: 1px solid var(--color-ContentBorders);
@@ -1889,14 +1890,13 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 }
 .wp-editor input[type=reset], .wp-editor input[type=submit] {
     display: inline-block;
-    font-size: 0.938rem;
     color: var(--color-button-text);
     background-color: var(--color-button-bg);
     border: none;
     padding: 10px 18px;
     text-decoration: none;
     border-radius: var(--border-radius-buttons, 3px);
-    font-size: 1rem;
+    font-size: var(--font-size-normal, 1rem);
     line-height: 1.5;
     text-align: center;
     font-weight: normal;
@@ -2061,11 +2061,11 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 .wp-editor table th,
 .wp-editor table td {
     padding: 0.3rem 0.6rem;
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor table th p,
 .wp-editor table td p {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor table th {
     color: var(--color-Text);
@@ -2090,7 +2090,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     background: var(--color-StandardHellgrau);
 }
 .wp-editor table ul li {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
     background-position: left 5px;
 }
 .wp-editor table.nooddcolor tr:nth-child(odd) td {
@@ -2147,7 +2147,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     border: none;
     font-family: var(--font-family-serif);
     position: relative;
-    font-size: 1.125rem;
+    font-size: var(--font-size-lg, 1.125rem);
     margin: 1rem;
     padding: 2rem 1.5rem;
     min-height: 3rem;
@@ -2174,7 +2174,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 .wp-editor blockquote p {
     margin-bottom: 0;
     font-family: var(--font-family-serif);
-    font-size: 1.125rem;
+    font-size: var(--font-size-lg, 1.125rem);
     font-weight: 400;
     letter-spacing: 0.3px;
 }
@@ -2185,7 +2185,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 .wp-editor blockquote cite {
     display: block;
     text-align: right;
-    font-size: 1rem;
+    font-size: var(--font-size-sm, 0.875rem);
     color: var(--color-Text);
 }
 .wp-editor blockquote small:before,
@@ -2227,10 +2227,10 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 .sidebar-inline .wp-editor blockquote {
     margin: 0.6rem;
     padding: 0.5rem;
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .sidebar-inline .wp-editor blockquote p {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor cite {
     color: var(--color-Text);
@@ -2241,10 +2241,10 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     color: inherit;
 }
 #content .sidebar-inline .wp-editor cite {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 #content .sidebar-inline .wp-editor cite p {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
 }
 .wp-editor acronym[title],
 .wp-editor acronym[data-original-title],
@@ -2428,8 +2428,8 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 }
 @media (min-width: 768px) {
     .wp-editor main figure.alignleft, .wp-editor main figure.alignright, .wp-editor main figure.alignnone, .wp-editor main figure.aligncenter, .wp-editor aside figure.alignleft, .wp-editor aside figure.alignright, .wp-editor aside figure.alignnone, .wp-editor aside figure.aligncenter, .wp-editor .portalpage-sidebar figure.alignleft, .wp-editor .portalpage-sidebar figure.alignright, .wp-editor .portalpage-sidebar figure.alignnone, .wp-editor .portalpage-sidebar figure.aligncenter, .wp-editor .widget figure.alignleft, .wp-editor .widget figure.alignright, .wp-editor .widget figure.alignnone, .wp-editor .widget figure.aligncenter {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: var(--width-gutter-half, 15px);
+        margin-right: var(--width-gutter-half, 15px);
     }
 }
 .wp-editor main figure.alignleft img, .wp-editor main figure.alignright img, .wp-editor main figure.alignnone img, .wp-editor main figure.aligncenter img, .wp-editor aside figure.alignleft img, .wp-editor aside figure.alignright img, .wp-editor aside figure.alignnone img, .wp-editor aside figure.aligncenter img, .wp-editor .portalpage-sidebar figure.alignleft img, .wp-editor .portalpage-sidebar figure.alignright img, .wp-editor .portalpage-sidebar figure.alignnone img, .wp-editor .portalpage-sidebar figure.aligncenter img, .wp-editor .widget figure.alignleft img, .wp-editor .widget figure.alignright img, .wp-editor .widget figure.alignnone img, .wp-editor .widget figure.aligncenter img {
@@ -2467,7 +2467,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     margin-top: 0;
 }
 .wp-editor figcaption {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
     padding: 0.3rem;
 }
 @media (min-width: 480px) {
@@ -2558,7 +2558,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     text-align: center;
     width: 100%;
     text-decoration: none;
-    font-size: 1.25rem;
+    font-size: var(--font-size-xl, 1.25rem);
 }
 .wp-editor #skiplinks .jumplinks li a:active:hover, .wp-editor #skiplinks .jumplinks li a:active:focus, .wp-editor #skiplinks .jumplinks li a:hover:hover, .wp-editor #skiplinks .jumplinks li a:hover:focus, .wp-editor #skiplinks .jumplinks li a:focus:hover, .wp-editor #skiplinks .jumplinks li a:focus:focus {
     color: var(--color-button-hover-text);
@@ -3271,14 +3271,13 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
 .wp-editor button,
 .wp-editor input[type=button] {
     display: inline-block;
-    font-size: 0.938rem;
     color: var(--color-button-text);
     background-color: var(--color-button-bg);
     border: none;
     padding: 10px 18px;
     text-decoration: none;
     border-radius: var(--border-radius-buttons, 3px);
-    font-size: 1rem;
+    font-size: var(--font-size-normal, 1rem);
     line-height: 1.5;
     text-align: center;
     font-weight: normal;
@@ -3309,14 +3308,13 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     text-underline-offset: 0.2rem;
     text-decoration-thickness: 0.1rem;
     display: inline-block;
-    font-size: 0.938rem;
     color: var(--color-button-text);
     background-color: var(--color-button-bg);
     border: none;
     padding: 10px 18px;
     text-decoration: none;
     border-radius: var(--border-radius-buttons, 3px);
-    font-size: 1rem;
+    font-size: var(--font-size-normal, 1rem);
     line-height: 1.5;
     text-align: center;
     font-weight: normal;
@@ -3374,7 +3372,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     text-underline-offset: 0.2rem;
     text-decoration-thickness: 0.1rem;
     display: inline-block;
-    font-size: 0.938rem;
+    font-size: var(--font-size-tiny, 0.938rem);
     background: transparent;
     color: var(--color-Text);
     border: 1px solid var(--color-ContentBorders);
@@ -3427,7 +3425,7 @@ table .wp-editor a:hover, table .wp-editor a:focus, .wp-editor a.tag-cloud-link,
     font-size: var(--font-size-normal, 1rem);
 }
 .wp-editor .wp-caption-text {
-    font-size: 0.875rem;
+    font-size: var(--font-size-sm, 0.875rem);
     padding: 0;
 }
 @media (min-width: 768px) {
