--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -106,14 +106,15 @@
     --color-overlay-dark: #{$colorOverlayDark};
     --color-overlay-light: #{$colorOverlayLight};
     
-    --font-size-small: 0.875rem;
-    --font-size-normal: 1rem;
-    --font-size-large:	1.25rem;
-    --font-size-larger: 1.5rem;   
-   
+    --font-size-xs:	#{$font-size-xs};
+    --font-size-sm:	#{$font-size-sm};  
+    --font-size-tiny:	#{$font-size-tiny};
+    --font-size-normal: #{$font-size-normal};  
+    --font-size-lg:	#{$font-size-lg};  
+    --font-size-xl:	#{$font-size-xl};  
+    --font-size-xxl:	#{$font-size-xxl};  
+
     
-    --font-size-x-large: 2.25rem;
-    --font-size-buttons: 0.938rem;
     
     --font-family-default: #{$fontStack};
     --font-family-serif: #{$fontStackSerifs};
