--- a/src/sass/block-library/_wp-general-classes.scss
+++ b/src/sass/block-library/_wp-general-classes.scss
@@ -10,7 +10,7 @@
 
 // Small Font size
 .has-small-font-size {
-    font-size: var(--font-size-small, 0.875rem);
+    font-size: var(--font-size-sm, 0.875rem);
 }
 
 // Regular Font size
@@ -20,13 +20,13 @@
 
 // Large Font size
 .has-large-font-size {
-    font-size: var(--font-size-large, 1.25rem);
+    font-size: var(--font-size-xl, 1.25rem);
 }
 
 // Larger Font size
 .has-huge-font-size,
 .has-larger-font-size {
-    font-size: var(--font-size-larger, 1.5rem);
+    font-size: var(--font-size-xxl, 1.5rem);
 }
 
 // Alignments
@@ -59,7 +59,7 @@
 p.has-drop-cap {
     &:not(:focus):first-letter {
         float: left;
-        font-size: var(--font-size-larger, 1.5rem);
+        font-size: var(--font-size-xxl, 1.5rem);
         font-weight: 100;
         margin: 0 .1em 0 0;
         text-transform: uppercase;
