--- a/src/sass/elements/_address.scss
+++ b/src/sass/elements/_address.scss
@@ -15,6 +15,6 @@
    
     aside &,
     .widget & {
-	 font-size: var(--font-size-small, 0.875rem);
+	 font-size: var(--font-size-sm, 0.875rem);
     }
 }
