--- a/src/sass/elements/_wordpress.scss
+++ b/src/sass/elements/_wordpress.scss
@@ -14,7 +14,7 @@
 
 
 .wp-caption-text {
-	font-size: var(--font-size-small, 0.875rem);
+	font-size: var(--font-size-sm, 0.875rem);
 	padding: 0;
 	@media (min-width:  $screen-sm) {
 	    padding: 5px 0 5px 0;
