--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -18,7 +18,7 @@
 	    box-shadow: none;
 	}
 	figcaption {
-	    font-size: var(--font-size-small, 0.875rem);
+	    font-size: var(--font-size-sm, 0.875rem);
 	    padding: 5px;
 	}
     }
@@ -192,7 +192,7 @@
 	figure,
 	.gallery-image-caption {
 	    text-align: center;
-	    font-size: var(--font-size-small, 0.875rem);
+	    font-size: var(--font-size-sm, 0.875rem);
 	    padding: 5px;
 	}
 	.slick-slider {
@@ -318,7 +318,7 @@
 
 		background: $colorCopyrightBackground;
 		color: $colorCopyright;
-		@include px2rem($font-size-hero-slider-copyright);
+		font-size: var(--font-size-sm, 0.875rem);
 		margin: 0;
 		padding: 1px 4px;
 		border: none;
