--- a/src/sass/structure/content/_organigramm.scss
+++ b/src/sass/structure/content/_organigramm.scss
@@ -34,7 +34,7 @@
 	
 	li {
 		background: none;
-		font-size: var(--font-size-large, 1.25rem);
+		font-size: var(--font-size-xl, 1.25rem);
 		margin-bottom: var(--width-gutter-half);
 		margin-top: 5px;
 		
@@ -44,7 +44,7 @@
 			margin-bottom: 0;
 			
 			li {
-				font-size: var(--font-size-small, 0.875rem);
+				font-size: var(--font-size-sm, 0.875rem);
 			}
 		}
 	}
