--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -96,7 +96,7 @@
     box-shadow: none;
     transition: initial;
     max-width: 40%;    
-    font-size: var(--font-size-small, 0.875rem);    
+    font-size: var(--font-size-sm, 0.875rem);    
     padding: 0.5rem 0.7rem;
     border: 1px solid var(--color-ContentBorders);
     border-radius: var(--border-radius);
@@ -169,7 +169,7 @@
     }
 
     .post-image-caption {
-        font-size: var(--font-size-small, 0.875rem);
+        font-size: var(--font-size-sm, 0.875rem);
         padding: 5px 0 10px 0;
         text-align: right;
         margin: 0 var(--width-gutter-half);
@@ -196,7 +196,7 @@
     display: block;
     padding: 5px 0;
     margin: 0 0 var(--width-gutter-half) 0;
-    font-size: var(--font-size-small, 0.875rem);
+    font-size: var(--font-size-sm, 0.875rem);
 
     
     .post-meta-date {
@@ -221,7 +221,7 @@
     padding-bottom: 50px;
     display: flex;
     align-items: center;
-    font-size: var(--font-size-small, 0.875rem);
+    font-size: var(--font-size-sm, 0.875rem);
     
     @media (max-width: $screen-sm) {
 	flex-wrap: wrap;
