--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -11,7 +11,7 @@
 	li {
 	    font-size: var(--font-size-normal, 1rem);
 	    @media (min-width: $screen-sm) {
-		font-size: var(--font-size-small, 0.875rem);
+		font-size: var(--font-size-sm, 0.875rem);
 	    }
 	}
 	
@@ -34,7 +34,7 @@
 	p, address {
 	    color: var(--color-footer-text);
 	    @media (min-width: $screen-sm) {
-		font-size: var(--font-size-small, 0.875rem);
+		font-size: var(--font-size-sm, 0.875rem);
 	    }
 
 	}
