--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -10,7 +10,7 @@
 
 	input,
 	li {
-		font-size: var(--font-size-small, 0.875rem);
+		font-size: var(--font-size-sm, 0.875rem);
 	}
 
 	@media (min-width: $screen-md) {
