--- a/src/sass/structure/navigation/_subnav.scss
+++ b/src/sass/structure/navigation/_subnav.scss
@@ -120,7 +120,7 @@
 		text-decoration: none;
 		overflow-wrap: break-word;
 		display: block;
-		@include px2rem($font-size-nav-level2);
+		font-size: var($font-size-normal, 1rem);
 		font-weight: 500;
 		color: var(--color-submenu-currentlevel-text);
 		padding: 0.35rem var(--width-gutter-half);
@@ -157,7 +157,7 @@
 	    a {
 			padding-left: 40px;
 			font-weight: unset;
-			@include px2rem($font-size-nav-level3);
+			font-size: var(--font-size-tiny, 0.938rem);
 	    }
 	    li {
 			a {
