--- a/src/sass/structure/widgets/_misc.scss
+++ b/src/sass/structure/widgets/_misc.scss
@@ -5,7 +5,7 @@
 .widget {
 	margin-bottom: 0.7rem;
 	overflow-wrap: break-word;
-	font-size: var(--font-size-small, 0.875rem);
+	font-size: var(--font-size-sm, 0.875rem);
 	ul {
 	    margin: 0;
 	    padding: 0;
@@ -17,7 +17,7 @@
 
 	
 	li {
-		font-size: var(--font-size-small, 0.875rem);
+		font-size: var(--font-size-sm, 0.875rem);
 		list-style-type: none;
 		
 		a {
@@ -46,6 +46,6 @@ span {
     aside &,
 	#content .widget &,
 	#content .widget & {
-	      font-size: var(--font-size-small, 0.875rem);
+	      font-size: var(--font-size-sm, 0.875rem);
 	}
 }
